@@ -22,10 +22,9 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.Collection;
 import java.util.List;
-import java.util.function.Function;
 
 import org.apache.cayenne.access.DataNode;
-import org.apache.cayenne.access.sqlbuilder.sqltree.Node;
+import org.apache.cayenne.access.sqlbuilder.sqltree.SQLTreeProcessor;
 import org.apache.cayenne.access.translator.ParameterBinding;
 import org.apache.cayenne.access.translator.ejbql.EJBQLTranslatorFactory;
 import org.apache.cayenne.access.translator.select.SelectTranslator;
@@ -72,9 +71,9 @@ public interface DbAdapter {
 
 	/**
 	 * @since 4.2
-	 * @return {@link Function} that can adjust SQL tree to specific database flavour
+	 * @return {@link SQLTreeProcessor} that can adjust SQL tree to specific database flavour
 	 */
-	Function<Node, Node> getSqlTreeProcessor();
+	SQLTreeProcessor getSqlTreeProcessor();
 
 	/**
 	 * Returns an instance of SQLAction that should handle the query.
